--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "^8.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-material-ui-carousel": "^2.1.2",
     "react-pdf": "^5.0.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
